--- a/src/assets/primevue/select.css
+++ b/src/assets/primevue/select.css
@@ -4,49 +4,49 @@
 
 .p-select {
     @apply inline-flex cursor-pointer relative select-none rounded-md
-        bg-surface-0 dark:bg-surface-950
-        border border-surface-300 dark:border-surface-700
+        bg-surface-0 
+        border border-surface-300 
         shadow-[0_1px_2px_0_rgba(18,18,23,0.05)]
         transition-colors duration-200
 }
 
 .p-select:not(.p-disabled):hover {
-    @apply border-surface-400 dark:border-surface-600
+    @apply border-surface-400 
 }
 
 .p-select:not(.p-disabled).p-focus {
-    @apply border-primary
+    @apply border-primary text-red-800
 }
 
 .p-select.p-variant-filled {
-    @apply bg-surface-50 dark:bg-surface-800
+    @apply bg-surface-50 
 }
 
 .p-select.p-invalid {
-    @apply border-red-400 dark:border-red-300
+    @apply border-red-400
 }
 
 .p-select.p-disabled {
-    @apply bg-surface-200 text-surface-500 dark:bg-surface-700 dark:text-surface-400 opacity-100 cursor-default
+    @apply bg-surface-200 text-surface-500 opacity-100 cursor-default
 }
 
 .p-select-clear-icon {
-    @apply absolute top-1/2 -mt-2 text-surface-500 dark:text-surface-400 right-10
+    @apply absolute top-1/2 -mt-2 text-surface-500 right-10
 }
 
 .p-select-dropdown {
     @apply flex items-center justify-center shrink-0 bg-transparent
-        text-surface-500 dark:text-surface-400 w-10 rounded-r-md
+        text-surface-500  w-10 rounded-r-md
 }
 
 .p-select-label {
     @apply block whitespace-nowrap overflow-hidden flex-auto w-[1%]
         py-2 px-3 overflow-ellipsis
-        text-surface-700 dark:text-surface-0 bg-transparent border-none outline-none
+        text-surface-700  bg-transparent border-none outline-none
 }
 
 .p-select-label.p-placeholder {
-    @apply text-surface-500 dark:text-surface-400
+    @apply text-surface-500 
 }
 
 .p-select:has(.p-select-clear-icon) .p-select-label {
@@ -54,7 +54,7 @@
 }
 
 .p-select.p-disabled .p-select-label {
-    @apply text-surface-500 dark:text-surface-400
+    @apply text-surface-500 
 }
 
 .p-select-label-empty {
@@ -71,9 +71,9 @@ input.p-select-label {
 
 .p-select-overlay {
     @apply absolute top-0 left-0 rounded-md
-        bg-surface-0 dark:bg-surface-900
-        border border-surface-200 dark:border-surface-700
-        text-surface-700 dark:text-surface-0
+        bg-surface-0 
+        border border-surface-200 
+        text-surface-700
         shadow-[0_4px_6px_-1px_rgba(0,0,0,0.1),0_2px_4px_-2px_rgba(0,0,0,0.1)]
 }
 
